--- a/ReadMe
+++ b/ReadMe
@@ -14,5 +14,8 @@ I would do something like running cat/proc/cpuinfo in the terminal to get an ide
 I will start by doing the reading assignments closely this time since it was hinted to me multiple times that it would make this assignment easier as well as my life easier. 
  
 As I start completing the warm up tasks I had a hard time printing the correct cpu info instead i always gett a buffer error. It is not until
-one of the TAs said to use getline() so all the hard work is done for me and all I had to do was free memory. I applied the same technique over to the 2nd warmup from free memory and buffers. As I was trying to figure out why am I only printing out just the free memory and nothing else was puzzling for me until I realized that my statement was outside the loop; wasted so many long hours trying to figure that one out. 
+one of the TAs said to use getline() so all the hard work is done for me and all I had to do was free memory. I applied the same technique over to the 2nd warmup from free memory and buffers. As I was trying to figure out why am I only printing out just the free memory and nothing else was puzzling for me until I realized that my statement was outside the loop; wasted so many long hours trying to figure that one out. printing file systems was the most challenging one out of all of them I reffered back to my project 0A which parses through the directory which the numbers on ls /proc happens to be folders/directories. I have that down its the getting if it is active then printing the PID TTY TIME and CMD was the absoltely challenging part and made me question my existence; it felt like a calling to switch majors.
 
+
+
+When putting everything together to make the myps program kinda had no idea where to begin. I start implmeneting my getopt and setting up flags because it looked the easiest and was right there in the manpage. Then I start making functions one by one and reaserch what code I could borrow from the reading,manpage, and lectures. my getProcessList() function was mostly just changing some stuff around since it was similar to the other projcts. But the hard part was comparing uid to pid, eventurally found a way to do it by reading and a little ctrl f on the manpages. The parseStat() function was a bit more tickier even though it was similar to my ls /proc program. I say that because it was hard because I had no idea how to parse through the stat file while getting all the info I need because I keep hitting dead ends. It is not until I read one of the reading from the textbook and kinda copied and modied it a bit. parseStatmfunction was the easiest in my opinion because of the getlinefunction which made life so much easier and pretty much stole it in the reading too 
